добавил цвет и событие на лайк

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 android {
     namespace 'ru.netology.nmedia'
     compileSdk 34
-
+    buildFeatures.viewBinding = true
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdk 23
