--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ android {
 }
 
 dependencies {
+    def mdc_version = "1.12.0"
 
+    implementation "com.google.android.material:material:$mdc_version"
     implementation("androidx.core:core-ktx:1.13.1")
     implementation libs.androidx.appcompat
     implementation libs.material
